--- a/src/main/resources/templates/layout/LoginArticle.html
+++ b/src/main/resources/templates/layout/LoginArticle.html
@@ -32,7 +32,7 @@
                 <p></p>
 
                 <button class="btn btn-sm" type="submit">Log In</button>
-                <button class="btn btn-sm" style="float:right" type="submit">Sign Up</button>
+                <button class="btn btn-sm" style="float:right" type="button" onclick="location.href='/signUpSelect'">Sign Up</button>
                 <!-- DTO 생성 후 수정 예정, 타임리프로 하이퍼링크 이용해야 이동하는 버튼 -->
 
             </form>
