--- a/src/main/resources/templates/signUpUser.html
+++ b/src/main/resources/templates/signUpUser.html
@@ -52,7 +52,7 @@
                         ID
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="text" class="form-control" id="userId" name="userId" placeholder=" "
+                        <input type="text" class="form-control" id="userId" name="userId" placeholder=" " onclick="checkId()"
                                onchange="checkId()">
                         <label for="userId" class="text-secondary opacity-50">사용할 ID를 입력해 주세요</label>
                         <!--                        처리결과 뜨는 span-->
@@ -69,7 +69,7 @@
                         Password
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="password" class="form-control" id="userPw" name="userPw" placeholder=" "
+                        <input type="password" class="form-control" id="userPw" name="userPw" placeholder=" " onclick="checkPw()"
                                onchange="checkPw(); checkDoublePw()">
                         <label for="userPw" class="text-secondary opacity-50">사용할 Password를 입력해 주세요</label>
                         <!--                        처리결과 뜨는 span-->
@@ -86,7 +86,7 @@
                         Check Password
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="password" class="form-control" id="userPw2" name="userPw2" placeholder=" "
+                        <input type="password" class="form-control" id="userPw2" name="userPw2" placeholder=" " onclick="checkPw2()"
                                onchange="checkDoublePw()">
                         <label for="userPw2" class="text-secondary opacity-50">Password를 한번 더 입력해주세요.</label>
                         <!--                        처리결과 뜨는 span-->
@@ -103,7 +103,7 @@
                         Name
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="text" class="form-control" id="userName" name="userName" placeholder=" " onchange="checkName()">
+                        <input type="text" class="form-control" id="userName" name="userName" placeholder=" " onclick="checkName()" onchange="checkName()">
                         <label for="userName" class="text-secondary opacity-50">이름을 입력해 주세요</label>
 
                         <span class="checkName no">필수 항목입니다.</span>
@@ -115,7 +115,7 @@
                         Phone
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="text" class="form-control" id="userPh" name="userPh" placeholder=" "
+                        <input type="text" class="form-control" id="userPh" name="userPh" placeholder=" " onclick="checkPh()"
                                onchange="checkPh()">
                         <label for="userPh" class="text-secondary opacity-50">전화번호를 입력해 주세요</label>
                         <!--                        처리결과 뜨는 span-->
@@ -131,7 +131,7 @@
                         Email
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="text" class="form-control" id="userMail" name="userMail" placeholder=" " onchange="checkMail()">
+                        <input type="text" class="form-control" id="userMail" name="userMail" placeholder=" " onclick="checkMail()" onchange="checkMail()">
                         <label for="userMail" class="text-secondary opacity-50">Email을 입력해 주세요</label>
                         <!--                        처리결과 뜨는 span-->
                         <span class="mail_ok ok">사용 가능한 이메일입니다.</span>
@@ -154,14 +154,14 @@
                     </div>
                     <div class="p-3 pb-2 mb-4">
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="userGen" id="1" value="M">
+                            <input class="form-check-input userGen" type="radio" name="userGen" id="1" value="M" onclick="checkGender()">
                             <!-- 이후 값 입력 받을 시 value 값을 <%= userGen1 %>으로 받아 넘기기 -->
-                            <label class="form-check-label userGen" for="1">male</label>
+                            <label class="form-check-label" for="1">male</label>
                         </div>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="userGen" id="2" value="F">
+                            <input class="form-check-input userGen" type="radio" name="userGen" id="2" value="F" onclick="checkGender()">
                             <!-- 이후 값 입력 받을 시 value 값을 <%= userGen2 %>으로 받아 넘기기 -->
-                            <label class="form-check-label userGen" for="2">Female</label>
+                            <label class="form-check-label" for="2">Female</label>
                         </div>
                         <span class="checkGen no">필수 항목입니다.</span>
                     </div>
@@ -171,8 +171,8 @@
                 <div class="container">
                     <div class="container-fluid">
                         <div class="d-grid gap-2">
-                            <button class="btn btn-outline-dark" type="button" id="btn-signUp">Sign Up</button>
-                            <button class="btn btn-outline-secondary" type="button">Cancel</button>
+                            <button class="btn btn-outline-dark" type="button" id="btn-signUp" onclick="checkAll()">Sign Up</button>
+                            <button class="btn btn-outline-secondary" type="button" onclick="history.back()">Cancel</button>
                         </div>
                     </div>
                 </div>
