사업자 회원가입(주소 입력인풋 넣어야함)

--- a/src/main/resources/templates/signUpSelect.html
+++ b/src/main/resources/templates/signUpSelect.html
@@ -25,7 +25,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
             <div class="form-label align-center">
                 <h2>가입하실 유형을 선택해주세요</h2>
                     <button class="btn btn-outline-primary btn-sm col-lg-2" type="button" onclick="location.href='/signUpUser'">일반</button>
-                    <button class="btn btn-outline-primary btn-sm " type="button" onclick="location.href='/signUpDesigner'">사업자</button>
+                    <button class="btn btn-outline-primary btn-sm " type="button" onclick="location.href='/signUpOwner'">사업자</button>
             </div>
         </div>
     </article>
