--- a/src/main/resources/templates/signUpOwner.html
+++ b/src/main/resources/templates/signUpOwner.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>일반 회원가입</title>
+    <title>사업자 회원가입</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -27,7 +27,7 @@
         }
     </style>
     <!--    유효성 검사 및 중복체크를 위한 자바스크립트-->
-    <script type="text/javascript" src="useJs/userCheck.js"></script>
+    <script type="text/javascript" src="useJs/shopCheck.js"></script>
 </head>
 
 <body>
@@ -45,16 +45,17 @@
 <main>
     <div class="container">
         <div class="container-fluid">
-            <form action="/signUser" class="border border-secondary rounded-3 p-5" method="post">
+            <form action="/signOwner" class="border border-secondary rounded-3 p-5" method="post">
                 <!-- ID -->
                 <div class="p-2">
                     <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary">
                         ID
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="text" class="form-control" id="userId" name="userId" placeholder=" " onclick="checkId()"
+                        <input type="text" class="form-control" id="shopId" name="shopId" placeholder=" "
+                               onclick="checkId()"
                                onchange="checkId()">
-                        <label for="userId" class="text-secondary opacity-50">사용할 ID를 입력해 주세요</label>
+                        <label for="shopId" class="text-secondary opacity-50">사용할 ID를 입력해 주세요</label>
                         <!--                        처리결과 뜨는 span-->
                         <span class="id_ok ok">사용 가능한 아이디입니다.</span>
                         <span class="id_already no">이미 사용중인 아이디입니다.</span>
@@ -69,9 +70,10 @@
                         Password
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="password" class="form-control" id="userPw" name="userPw" placeholder=" " onclick="checkPw()"
+                        <input type="password" class="form-control" id="shopPw" name="shopPw" placeholder=" "
+                               onclick="checkPw()"
                                onchange="checkPw(); checkDoublePw()">
-                        <label for="userPw" class="text-secondary opacity-50">사용할 Password를 입력해 주세요</label>
+                        <label for="shopPw" class="text-secondary opacity-50">사용할 Password를 입력해 주세요</label>
                         <!--                        처리결과 뜨는 span-->
                         <span class="pwd_ok ok">사용 가능한 비밀번호입니다.</span>
                         <span class="pwd_not no">8~16자 영문 대 소문자, 숫자, 특수문자를 사용하세요.</span>
@@ -86,9 +88,10 @@
                         Check Password
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="password" class="form-control" id="userPw2" name="userPw2" placeholder=" " onclick="checkPw2()"
+                        <input type="password" class="form-control" id="shopPw2" name="shopPw2" placeholder=" "
+                               onclick="checkPw2()"
                                onchange="checkDoublePw()">
-                        <label for="userPw2" class="text-secondary opacity-50">Password를 한번 더 입력해주세요.</label>
+                        <label for="shopPw2" class="text-secondary opacity-50">Password를 한번 더 입력해주세요.</label>
                         <!--                        처리결과 뜨는 span-->
                         <span class="pwd2_ok ok">두 비밀번호가 일치합니다.</span>
                         <span class="pwd2_not no">두 비밀번호가 다릅니다.</span>
@@ -97,27 +100,61 @@
                     </div>
                 </div>
 
-                <!-- 이름 -->
+                <!-- 상호명 -->
+                <div class="p-2">
+                    <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary">
+                        Shop Name
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input type="text" class="form-control" id="shopName" name="shopName" placeholder=" "
+                               onclick="checkShopName()" onchange="checkShopName()">
+                        <label for="shopName" class="text-secondary opacity-50">Shop Name을 입력해 주세요</label>
+
+                        <span class="checkShopName no">필수 항목입니다.</span>
+                    </div>
+                </div>
+                <!-- Shop Tel -->
+                <div class="p-2">
+                    <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary">
+                        Shop Tel
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input type="text" class="form-control" id="shopTel" name="shopTel" placeholder=" "
+                               onclick="checkShopTel()"
+                               onchange="checkShopTel()">
+                        <label for="shopTel" class="text-secondary opacity-50">전화번호를 입력해 주세요</label>
+                        <!--                        처리결과 뜨는 span-->
+                        <span class="tel_ok ok">사용 가능한 전화번호입니다.</span>
+                        <span class="tel_already no">이미 사용중인 전화번호입니다.</span>
+                        <span class="tel_not no">잘못된 전화번호입니다.</span>
+                        <span class="checkTel no">필수 항목입니다.</span>
+                    </div>
+                </div>
+
+                <!-- Owner Name -->
                 <div class="p-2">
                     <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary">
                         Name
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="text" class="form-control" id="userName" name="userName" placeholder=" " onclick="checkName()" onchange="checkName()">
-                        <label for="userName" class="text-secondary opacity-50">이름을 입력해 주세요</label>
+                        <input type="text" class="form-control" id="ownerName" name="ownerName" placeholder=" "
+                               onclick="checkName()" onchange="checkName()">
+                        <label for="ownerName" class="text-secondary opacity-50">이름을 입력해 주세요</label>
 
                         <span class="checkName no">필수 항목입니다.</span>
                     </div>
                 </div>
+
                 <!-- Phone -->
                 <div class="p-2">
                     <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary">
                         Phone
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="text" class="form-control" id="userPh" name="userPh" placeholder=" " onclick="checkPh()"
+                        <input type="text" class="form-control" id="ownerPh" name="useownerPhrPh" placeholder=" "
+                               onclick="checkPh()"
                                onchange="checkPh()">
-                        <label for="userPh" class="text-secondary opacity-50">전화번호를 입력해 주세요</label>
+                        <label for="ownerPh" class="text-secondary opacity-50">전화번호를 입력해 주세요</label>
                         <!--                        처리결과 뜨는 span-->
                         <span class="ph_ok ok">사용 가능한 전화번호입니다.</span>
                         <span class="ph_already no">이미 사용중인 전화번호입니다.</span>
@@ -131,8 +168,9 @@
                         Email
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="text" class="form-control" id="userMail" name="userMail" placeholder=" " onclick="checkMail()" onchange="checkMail()">
-                        <label for="userMail" class="text-secondary opacity-50">Email을 입력해 주세요</label>
+                        <input type="text" class="form-control" id="ownerMail" name="ownerMail" placeholder=" "
+                               onclick="checkMail()" onchange="checkMail()">
+                        <label for="ownerMail" class="text-secondary opacity-50">Email을 입력해 주세요</label>
                         <!--                        처리결과 뜨는 span-->
                         <span class="mail_ok ok">사용 가능한 이메일입니다.</span>
                         <span class="mail_already no">이미 사용중인 이메일입니다.</span>
@@ -154,11 +192,13 @@
                     </div>
                     <div class="p-3 pb-2 mb-4">
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input userGen" type="radio" name="userGen" id="1" value="M" onclick="checkGender()">
+                            <input class="form-check-input ownerGen" type="radio" name="ownerGen" id="1" value="M"
+                                   onclick="checkGender()">
                             <label class="form-check-label" for="1">male</label>
                         </div>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input userGen" type="radio" name="userGen" id="2" value="F" onclick="checkGender()">
+                            <input class="form-check-input ownerGen" type="radio" name="ownerGen" id="2" value="F"
+                                   onclick="checkGender()">
                             <label class="form-check-label" for="2">Female</label>
                         </div>
                         <span class="checkGen no">필수 항목입니다.</span>
@@ -169,8 +209,11 @@
                 <div class="container">
                     <div class="container-fluid">
                         <div class="d-grid gap-2">
-                            <button class="btn btn-outline-dark" type="button" id="btn-signUp" onclick="checkAll()">Sign Up</button>
-                            <button class="btn btn-outline-secondary" type="button" onclick="history.back()">Cancel</button>
+                            <button class="btn btn-outline-dark" type="button" id="btn-signUp" onclick="checkAll()">Sign
+                                Up
+                            </button>
+                            <button class="btn btn-outline-secondary" type="button" onclick="history.back()">Cancel
+                            </button>
                         </div>
                     </div>
                 </div>
