사업자 회원가입 완

--- a/src/main/resources/templates/layout/Header.html
+++ b/src/main/resources/templates/layout/Header.html
@@ -26,8 +26,9 @@
         <ul>
             <li><a href="#Login">Login</a></li>
             <li><a href="#Shop">Shop</a></li>
+            <li><a href="#Shop">Shop</a></li>
             <li><a href="#Agent">Agent</a></li>
-            <li><a href="#About">About</a></li>
+            <li><a href="#Mypage">Mypage</a></li>
             <!--<li><a href="#elements">Elements</a></li>-->
         </ul>
     </nav>
