--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -42,6 +42,10 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 
         <!-- About -->
         <article th:replace="layout/AboutArticle :: #About"></article>
+        <article th:replace="layout/Mypage :: #Mypage"></article>
+
+<!--        <article th:replace="layout/AboutArticle :: #About"></article>-->
+
     </div>
 
     <!--Footer-->
