가입완료 페이지, 예약 완료 페이지, 마이페이지 선택화면, shop 버튼 클릭 이벤트 추가

--- a/src/main/resources/templates/layout/Mypage.html
+++ b/src/main/resources/templates/layout/Mypage.html
@@ -11,20 +11,18 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 </head>
 <body>
-<article th:fragment="Agent" id="Agent">
-    <h2 class="align-center">고객지원</h2>
+<article th:fragment="Mypage" id="Mypage">
+    <h2 class="align-center">My Page</h2>
 
-    <!-- 미용실 관련 사진 -->
-    <span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-
-    <h3 CLASS="align-center">무엇을 도와드릴까요?</h3>
-
-    <!-- 서비스 버튼 창 -->
     <div class="container">
 
-        <button type="button" style="display:block; width:100%; text-align:center; font-size:1em; padding:2px;">1:1 상담</button>
+        <button type="button" style="display:block; width:100%; text-align:center; font-size:1em; padding:2px;"> 일반
+        </button>
         <p></p>
-        <button type="button" style="display:block; width:100%; text-align:center; font-size:1em; padding:2px;">Q&A</button>
+        <button type="button" style="display:block; width:100%; text-align:center; font-size:1em; padding:2px;"> 사업자
+        </button>
+        <p></p>
+
     </div>
 </article>
 </body>
