--- a/src/main/resources/templates/layout/Footer.html
+++ b/src/main/resources/templates/layout/Footer.html
@@ -12,7 +12,9 @@
 <body>
 
 <footer th:fragment="mainFooter" id="footer" class="text-center">
+    <div class="container">
     <p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+    </div>
 </footer>
 
 </body>
