--- a/src/main/resources/templates/layout/Header.html
+++ b/src/main/resources/templates/layout/Header.html
@@ -28,6 +28,7 @@
             <li><a href="#Shop">Shop</a></li>
             <li><a href="#Agent">Agent</a></li>
             <li><a href="#About">About</a></li>
+            <li><a href="#Mypage">Agent</a></li>
             <!--<li><a href="#elements">Elements</a></li>-->
         </ul>
     </nav>
