--- a/src/main/resources/templates/layout/LoginArticle.html
+++ b/src/main/resources/templates/layout/LoginArticle.html
@@ -15,26 +15,41 @@
 <!-- Login section  -->
 <article th:fragment="LoginArticle" id="Login">
     <h2 class="major">Login</h2>
+
+
     <!-- Login Image-->
     <span class="image main"><img src="images/pic01.jpg" alt=""/></span>
     <div class="container m-6 my-5 h-100">
         <div class="row ms-5 mx-5">
             <form id="frm" class="form-control container-fluid">
-                <div class="mb-3">
-                    <label class="form-label" for="id">ID</label>
-                    <input class="form-control" type="text" name="id" id="id"/>
-                </div>
-                <p></p>
-                <div class="mb-3">
-                    <label class="form-label" for="pwd">PW</label>
-                    <input class="form-control" type="password" name="pwd" id="pwd"/>
+
+                <div class="container overflow-hidden text-center">
+                    <div class="form-check form-check">
+                        <input class="form-check-input" type="checkbox" id="01" value="option1">
+                        <label class="form-check-label" for="01">1</label>
+                    </div>
                 </div>
                 <p></p>
 
-                <button class="btn btn-sm" type="submit">Log In</button>
-                <button class="btn btn-sm" style="float:right" type="submit">Sign Up</button>
+                <div class="container wrapper">
+                    <div class="mb-3">
+
+                        <label class="form-label" for="id">ID</label>
+                        <input class="form-control" type="text" name="id" id="id"/>
+
+                    </div>
+                    <p></p>
+                    <div class="mb-3">
+                        <label class="form-label" for="pwd">PW</label>
+                        <input class="form-control" type="password" name="pwd" id="pwd"/>
+                    </div>
+                    <p></p>
+                    <button class="btn btn-sm " type="submit">Log In</button>
+                    <button class="btn btn-sm container-fluid" style="float:right" type="button"
+                            onclick="location.href='/signUpSelect'">Sign Up
+                    </button>
+                </div>
                 <!-- DTO 생성 후 수정 예정, 타임리프로 하이퍼링크 이용해야 이동하는 버튼 -->
-
             </form>
         </div>
     </div>
