--- a/src/main/resources/templates/layout/ShopArticle.html
+++ b/src/main/resources/templates/layout/ShopArticle.html
@@ -32,7 +32,7 @@
 
 <!-- 예약 페이지 -->
 
-    <button type="button" class="btn btn-sm"> 예약하러 하기 </button>
+    <button type="button" class="btn btn-sm" onclick="location.href='/apoint'"> 예약하러 하기 </button>
 
 </article>
 </body>
