--- a/src/main/resources/templates/appointment.html
+++ b/src/main/resources/templates/appointment.html
@@ -54,7 +54,7 @@
                                         <form autocomplete="off">
                                             <div class="card-header">
                                                 <div class="mx-0 mb-0 row justify-content-sm-center justify-content-start px-1">
-                                                    <input type="text" id="dp1" class="datepicker"
+                                                    <input onclick="datepicker()" type="text" id="dp1" class="datepicker"
                                                            placeholder="날짜와 시간을 선택해 주세요"
                                                            name="date" readonly><span class="fa fa-calendar"></span>
                                                 </div>
