--- a/src/main/resources/templates/appointment.html
+++ b/src/main/resources/templates/appointment.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Appointment /예약 페이지 </title>
     <meta charset="utf-8"/>
@@ -17,10 +17,21 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.js"></script>
+    <!-- 캘린더 api -->
     <link rel="stylesheet" href="assets/css/calender.css">
     <script src="assets/js/calender.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/locales/bootstrap-datepicker.kr.min.js"></script>
     <!--  --------------------------------------------------------------------->
+    <style>
+        ul {
+            list-style: none;
+            padding-left: 0px;
+        }
 
+        .dis {
+            display: none;
+        }
+    </style>
 
 </head>
 
@@ -40,7 +51,7 @@
 <main>
     <div class="container">
         <div class="container-fluid">
-            <form class="border border-secondary rounded-3 p-1">
+            <form class="border border-secondary rounded-3 p-1" action="/insertAppointment" method="post">
                 <div class="p-5">
                     <!-- 예약 날짜 / 시간 (javascript & css 같이 사용) -->
                     <div class="p-3">
@@ -54,86 +65,94 @@
                                         <form autocomplete="off">
                                             <div class="card-header">
                                                 <div class="mx-0 mb-0 row justify-content-sm-center justify-content-start px-1">
-                                                    <input onclick="datepicker()" type="text" id="dp1" class="datepicker"
-                                                           placeholder="날짜와 시간을 선택해 주세요"
-                                                           name="date" readonly><span class="fa fa-calendar"></span>
+                                                    <input type="text" id="dp1" class="datepicker"
+                                                           placeholder="날짜를 선택해 주세요" name="apointDate" readonly><span
+                                                        class="fa fa-calendar"></span>
+                                                    <input type="text" class="datepicker" id="dp2"
+                                                           placeholder="시간을 선택해 주세요" name="Time" disabled="true">
+                                                    <input hidden type="text" id="apointTime" name="apointTime">
                                                 </div>
                                             </div>
+
                                             <div class="card-body p-3 p-sm-5">
-                                                <div class="row text-center mx-0">
-                                                    <div class="col-md-2 col-4 my-1 px-2">
-                                                        <div class="cell py-1">9:00AM</div>
-                                                    </div>
-                                                    <div class="col-md-2 col-4 my-1 px-2">
-                                                        <div class="cell py-1">9:30AM</div>
-                                                    </div>
-                                                    <div class="col-md-2 col-4 my-1 px-2">
-                                                        <div class="cell py-1">9:45AM</div>
-                                                    </div>
-                                                    <div class="col-md-2 col-4 my-1 px-2">
+                                                <ul class="row text-center mx-0">
+                                                    <li class="col-md-2 col-4 my-1 px-2">
                                                         <div class="cell py-1">10:00AM</div>
-                                                    </div>
-                                                    <div class="col-md-2 col-4 my-1 px-2">
+                                                    </li>
+                                                    <li class="col-md-2 col-4 my-1 px-2">
                                                         <div class="cell py-1">10:30AM</div>
-                                                    </div>
-                                                    <div class="col-md-2 col-4 my-1 px-2">
-                                                        <div class="cell py-1">10:45AM</div>
-                                                    </div>
-                                                </div>
-                                                <div class="row text-center mx-0">
-                                                    <div class="col-md-2 col-4 my-1 px-2">
+                                                    </li>
+                                                    <li class="col-md-2 col-4 my-1 px-2">
                                                         <div class="cell py-1">11:00AM</div>
-                                                    </div>
-                                                    <div class="col-md-2 col-4 my-1 px-2">
+                                                    </li>
+                                                    <li class="col-md-2 col-4 my-1 px-2">
                                                         <div class="cell py-1">11:30AM</div>
-                                                    </div>
-                                                    <div class="col-md-2 col-4 my-1 px-2">
-                                                        <div class="cell py-1">11:45AM</div>
-                                                    </div>
-                                                    <div class="col-md-2 col-4 my-1 px-2">
+                                                    </li>
+                                                    <li class="col-md-2 col-4 my-1 px-2">
                                                         <div class="cell py-1">12:00PM</div>
-                                                    </div>
-                                                    <div class="col-md-2 col-4 my-1 px-2">
+                                                    </li>
+                                                    <li class="col-md-2 col-4 my-1 px-2">
                                                         <div class="cell py-1">12:30PM</div>
-                                                    </div>
-                                                    <div class="col-md-2 col-4 my-1 px-2">
-                                                        <div class="cell py-1">12:45PM</div>
-                                                    </div>
-                                                </div>
-                                                <div class="row text-center mx-0">
-                                                    <div class="col-md-2 col-4 my-1 px-2">
+                                                    </li>
+
+                                                    <li class="col-md-2 col-4 my-1 px-2">
                                                         <div class="cell py-1">1:00PM</div>
-                                                    </div>
-                                                    <div class="col-md-2 col-4 my-1 px-2">
+                                                    </li>
+                                                    <li class="col-md-2 col-4 my-1 px-2">
                                                         <div class="cell py-1">1:30PM</div>
-                                                    </div>
-                                                    <div class="col-md-2 col-4 my-1 px-2">
-                                                        <div class="cell py-1">1:45PM</div>
-                                                    </div>
-                                                    <div class="col-md-2 col-4 my-1 px-2">
+                                                    </li>
+                                                    <li class="col-md-2 col-4 my-1 px-2">
                                                         <div class="cell py-1">2:00PM</div>
-                                                    </div>
-                                                    <div class="col-md-2 col-4 my-1 px-2">
+                                                    </li>
+                                                    <li class="col-md-2 col-4 my-1 px-2">
                                                         <div class="cell py-1">2:30PM</div>
-                                                    </div>
-                                                    <div class="col-md-2 col-4 my-1 px-2">
-                                                        <div class="cell py-1">2:45PM</div>
-                                                    </div>
-                                                </div>
-                                                <div class="row text-center mx-0">
-                                                    <div class="col-md-2 col-4 my-1 px-2">
+                                                    </li>
+                                                    <li class="col-md-2 col-4 my-1 px-2">
                                                         <div class="cell py-1">3:00PM</div>
-                                                    </div>
-                                                    <div class="col-md-2 col-4 my-1 px-2">
+                                                    </li>
+                                                    <li class="col-md-2 col-4 my-1 px-2">
                                                         <div class="cell py-1">3:30PM</div>
-                                                    </div>
-                                                    <div class="col-md-2 col-4 my-1 px-2">
-                                                        <div class="cell py-1">4:15PM</div>
-                                                    </div>
-                                                    <div class="col-md-2 col-4 my-1 px-2">
+                                                    </li>
+
+                                                    <li class="col-md-2 col-4 my-1 px-2">
+                                                        <div class="cell py-1">4:00PM</div>
+                                                    </li>
+                                                    <li class="col-md-2 col-4 my-1 px-2">
+                                                        <div class="cell py-1">4:30PM</div>
+                                                    </li>
+                                                    <li class="col-md-2 col-4 my-1 px-2">
                                                         <div class="cell py-1">5:00PM</div>
-                                                    </div>
-                                                </div>
+                                                    </li>
+                                                    <li class="col-md-2 col-4 my-1 px-2">
+                                                        <div class="cell py-1">5:30PM</div>
+                                                    </li>
+                                                    <li class="col-md-2 col-4 my-1 px-2">
+                                                        <div class="cell py-1">6:00PM</div>
+                                                    </li>
+                                                    <li class="col-md-2 col-4 my-1 px-2">
+                                                        <div class="cell py-1">6:30PM</div>
+                                                    </li>
+
+                                                    <li class="col-md-2 col-4 my-1 px-2">
+                                                        <div class="cell py-1">7:00PM</div>
+                                                    </li>
+                                                    <li class="col-md-2 col-4 my-1 px-2">
+                                                        <div class="cell py-1">7:30PM</div>
+                                                    </li>
+                                                    <li class="col-md-2 col-4 my-1 px-2">
+                                                        <div class="cell py-1">8:00PM</div>
+                                                    </li>
+                                                    <li class="col-md-2 col-4 my-1 px-2">
+                                                        <div class="cell py-1">8:300PM</div>
+                                                    </li>
+                                                    <li class="col-md-2 col-4 my-1 px-2">
+                                                        <div class="cell py-1">9:00PM</div>
+                                                    </li>
+                                                    <li class="col-md-2 col-4 my-1 px-2">
+                                                        <div class="cell py-1">9:30PM</div>
+                                                    </li>
+
+                                                </ul>
                                             </div>
                                         </form>
                                     </div>
@@ -152,7 +171,7 @@
                             Hair Cut
                         </div>
                         <div class="form-floating mb-3">
-                            <select id="cut" name="" class="form-select form-select-sm pt-2 fw-semibold">
+                            <select id="cut" name="apointCut" class="form-select form-select-sm pt-2 fw-semibold">
                                 <option value="selectd">원하는 컷을 선택해 주세요</option>
                                 <option value="101">해당 없음</option>
                                 <option value="102">여성 일반 Cut</option>
@@ -170,7 +189,7 @@
                             Perm
                         </div>
                         <div class="form-floating mb-3">
-                            <select id="perm" name="" class="form-select form-select-sm pt-2 fw-semibold">
+                            <select id="perm" name="apointPerm" class="form-select form-select-sm pt-2 fw-semibold">
                                 <option value="selectd">원하는 스타일을 선택해 주세요</option>
                                 <option value="201">해당 없음</option>
                                 <option value="202">다운 펌</option>
@@ -187,7 +206,7 @@
                             Color
                         </div>
                         <div class="form-floating mb-3">
-                            <select id="color" name="" class="form-select form-select-sm pt-2 fw-semibold">
+                            <select id="color" name="apointColor" class="form-select form-select-sm pt-2 fw-semibold">
                                 <option value="selectd">원하는 스타일을 선택해 주세요</option>
                                 <option value="301">해당 없음</option>
                                 <option value="302">뿌리 염색</option>
@@ -203,7 +222,7 @@
                             Clinic
                         </div>
                         <div class="form-floating mb-3">
-                            <select id="clinic" name="" class="form-select form-select-sm pt-2 fw-semibold">
+                            <select id="clinic" name="apointClinic" class="form-select form-select-sm pt-2 fw-semibold">
                                 <option value="selectd">원하는 스타일을 선택해 주세요</option>
                                 <option value="401">해당 없음</option>
                                 <option value="402">모발 클리닉</option>
@@ -218,15 +237,20 @@
                         <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary">
                             Designer
                         </div>
-
                     </div>
 
+                    <input hidden name="apointUserId" th:value="${session.user.userId}">
+                    <input hidden name="apointUserPh" th:value="${session.user.userPh}">
+                    <input hidden name="apointUserName" th:value="${session.user.userName}">
 
                     <div class="d-grid gap-2">
-                        <button class="btn btn-outline-dark" type="button">Sign Up</button>
+                        <button onclick="sumbit()" class="btn btn-outline-dark" type="button" id="btn-apoint">Sign Up
+                        </button>
                         <button class="btn btn-outline-secondary" type="button">Cancel</button>
                     </div>
                 </div>
+
+
             </form>
 
         </div>
