--- a/src/main/resources/templates/myPageShop.html
+++ b/src/main/resources/templates/myPageShop.html
@@ -1,6 +1,6 @@
-<html>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>예약 완료</title>
+    <title>마이페이지</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -66,28 +66,18 @@
                                 <h3>회원정보</h3>
                             </div>
                             <div class="mb-3 row">
-                                <label for="name" class="col-sm-3 col-form-label">닉네임</label>
+                                <label for="name" class="col-sm-3 col-form-label">Shop Name</label>
                                 <div class="col-sm-9">
-                                    <div class="input-group mb-3">
-                                        <input type="text" class="form-control" placeholder="닉네임 입력"
-                                               aria-label="Recipient's username" aria-describedby="button-addon2">
-                                        <button class="btn btn-outline-secondary" type="button" id="button-addon2">확인
-                                        </button>
-                                    </div>
-                                </div>
-                                <label for="name" class="col-sm-3 col-form-label">이름</label>
-                                <div class="col-sm-9">
-                                    <input type="text" readonly class="form-control-plaintext" id="name" value="김뚜따">
+<!--                                    Shop Name-->
+                                    <input type="text" readonly class="form-control-plaintext" id="name" th:value="${session.shop.shopName}">
                                 </div>
                                 <label for="staticEmail" class="col-sm-3 col-form-label">Email</label>
                                 <div class="col-sm-9">
-                                    <input type="text" readonly class="form-control-plaintext" id="staticEmail"
-                                           value="ahadk@naver.com">
+                                    <input type="text" readonly class="form-control-plaintext" id="staticEmail" th:value="${session.shop.ownerMail}">
                                 </div>
-                                <label for="Password" class="col-sm-3 col-form-label">비밀번호</label>
+                                <label for="shopTel" class="col-sm-3 col-form-label">Shop Tel</label>
                                 <div class="col-sm-9">
-                                    <input type="text" readonly class="form-control-plaintext" id="Password"
-                                           value="hihi3535">
+                                    <input type="text" readonly class="form-control-plaintext" id="shopTel" th:value="${session.shop.shopTel}">
                                 </div>
                                 <label for="Phone" class="col-sm-3 col-form-label">전화번호</label>
                                 <div class="col-sm-9">
