--- a/src/main/resources/templates/appointment.html
+++ b/src/main/resources/templates/appointment.html
@@ -21,18 +21,26 @@
     <link rel="stylesheet" href="assets/css/calender.css">
     <script src="assets/js/calender.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/locales/bootstrap-datepicker.kr.min.js"></script>
+
+    <!--    swal(alert 대체)-->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
+    <!--    값 확인-->
+    <script type="text/javascript" src="useJs/apoint.js"></script>
     <!--  --------------------------------------------------------------------->
     <style>
         ul {
             list-style: none;
             padding-left: 0px;
         }
-
-        .dis {
+    </style>
+    <!--    유효성 검사-->
+    <style>
+        span {
             display: none;
+            color: red;
         }
     </style>
-
 </head>
 
 <body>
@@ -65,17 +73,24 @@
                                         <form autocomplete="off">
                                             <div class="card-header">
                                                 <div class="mx-0 mb-0 row justify-content-sm-center justify-content-start px-1">
-                                                    <input type="text" id="dp1" class="datepicker"
+                                                    <input type="text" onclick="checkDate()" onchange="checkDate()"
+                                                           id="dp1" class="datepicker"
                                                            placeholder="날짜를 선택해 주세요" name="apointDate" readonly><span
                                                         class="fa fa-calendar"></span>
+                                                    <!--값 뜨는곳-->
+                                                    <span class="date">값을 정해주세요.</span>
                                                     <input type="text" class="datepicker" id="dp2"
                                                            placeholder="시간을 선택해 주세요" name="Time" disabled="true">
+                                                    <!--값 뜨는곳-->
+                                                    <span class="time">값을 정해주세요.</span>
+<!--                                                    dp2에 datepicker가 있어서 disavbled로 막아 값이 안가져와서 하이든 인풋 태그를 만듦-->
                                                     <input hidden type="text" id="apointTime" name="apointTime">
                                                 </div>
                                             </div>
 
                                             <div class="card-body p-3 p-sm-5">
-                                                <ul class="row text-center mx-0">
+                                                <ul onclick="checkTime()" onchange="checkTime()"
+                                                    class="row text-center mx-0">
                                                     <li class="col-md-2 col-4 my-1 px-2">
                                                         <div class="cell py-1">10:00AM</div>
                                                     </li>
@@ -160,27 +175,25 @@
                             </div>
                         </div>
                     </div>
-
-
                     <!--                    메뉴 선택 -->
-
-
                     <!-- cut 번호 101~ -->
                     <div class="p-2">
                         <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary">
                             Hair Cut
                         </div>
                         <div class="form-floating mb-3">
-                            <select id="cut" name="apointCut" class="form-select form-select-sm pt-2 fw-semibold">
-                                <option value="selectd">원하는 컷을 선택해 주세요</option>
-                                <option value="101">해당 없음</option>
-                                <option value="102">여성 일반 Cut</option>
-                                <option value="103">여성 일반 Cut</option>
-                                <option value="104">여성 특수 Cut</option>
-                                <option value="105">남성 일반 Cut</option>
-                                <option value="106">남성 특수 Cut</option>
+                            <select onclick="checkCut()" onchange="checkCut()" id="apointCut" name="apointCut"
+                                    class="form-select form-select-sm pt-2 fw-semibold">
+                                <option value=" ">원하는 컷을 선택해 주세요</option>
+                                <option value="해당 없음">해당 없음</option>
+                                <option value="맡기기">맡기기</option>
+                                <option value="여성 일반 Cut">여성 일반 Cut</option>
+                                <option value="여성 특수 Cut">여성 특수 Cut</option>
+                                <option value="남성 일반 Cut">남성 일반 Cut</option>
+                                <option value="남성 특수 Cut">남성 특수 Cut</option>
                             </select>
                         </div>
+                        <span class="cut">값을 정해주세요.</span>
                     </div>
 
                     <!-- Perm 번호 201~-->
@@ -189,16 +202,19 @@
                             Perm
                         </div>
                         <div class="form-floating mb-3">
-                            <select id="perm" name="apointPerm" class="form-select form-select-sm pt-2 fw-semibold">
-                                <option value="selectd">원하는 스타일을 선택해 주세요</option>
-                                <option value="201">해당 없음</option>
-                                <option value="202">다운 펌</option>
-                                <option value="203">부분 펌</option>
-                                <option value="204">셋팅 펌</option>
-                                <option value="205">볼륨 매직</option>
-                                <option value="206">뿌리 매직</option>
+                            <select onclick="checkPerm()" onchange="checkPerm()" id="apointPerm" name="apointPerm"
+                                    class="form-select form-select-sm pt-2 fw-semibold">
+                                <option value=" ">원하는 스타일을 선택해 주세요</option>
+                                <option value="해당 없음">해당 없음</option>
+                                <option value="맡기기">맡기기</option>
+                                <option value="다운 펌">다운 펌</option>
+                                <option value="부분 펌">부분 펌</option>
+                                <option value="셋팅 펌">셋팅 펌</option>
+                                <option value="볼륨 매직">볼륨 매직</option>
+                                <option value="뿌리 매직">뿌리 매직</option>
                             </select>
                         </div>
+                        <span class="perm">값을 정해주세요.</span>
                     </div>
                     <!-- Color 301~-->
                     <div class="p-2">
@@ -206,15 +222,18 @@
                             Color
                         </div>
                         <div class="form-floating mb-3">
-                            <select id="color" name="apointColor" class="form-select form-select-sm pt-2 fw-semibold">
-                                <option value="selectd">원하는 스타일을 선택해 주세요</option>
-                                <option value="301">해당 없음</option>
-                                <option value="302">뿌리 염색</option>
-                                <option value="303">전체 염색</option>
-                                <option value="304">뿌리 탈색</option>
-                                <option value="305">전체 탈색</option>
+                            <select onclick="checkColor()" onchange="checkColor()" id="apointColor" name="apointColor"
+                                    class="form-select form-select-sm pt-2 fw-semibold">
+                                <option value=" ">원하는 스타일을 선택해 주세요</option>
+                                <option value="해당 없음">해당 없음</option>
+                                <option value="맡기기">맡기기</option>
+                                <option value="뿌리 염색">뿌리 염색</option>
+                                <option value="전체 염색">전체 염색</option>
+                                <option value="뿌리 탈색">뿌리 탈색</option>
+                                <option value="전체 탈색">전체 탈색</option>
                             </select>
                         </div>
+                        <span class="color">값을 정해주세요.</span>
                     </div>
                     <!-- Clinic 401~-->
                     <div class="p-2">
@@ -222,33 +241,29 @@
                             Clinic
                         </div>
                         <div class="form-floating mb-3">
-                            <select id="clinic" name="apointClinic" class="form-select form-select-sm pt-2 fw-semibold">
-                                <option value="selectd">원하는 스타일을 선택해 주세요</option>
-                                <option value="401">해당 없음</option>
-                                <option value="402">모발 클리닉</option>
-                                <option value="403">단백질 앰플 추가</option>
-                                <option value="404">두피 클리닉</option>
+                            <select onclick="checkClinic()" onchange="checkClinic()" id="apointClinic"
+                                    name="apointClinic" class="form-select form-select-sm pt-2 fw-semibold">
+                                <option value=" ">원하는 스타일을 선택해 주세요</option>
+                                <option value="해당 없음">해당 없음</option>
+                                <option value="맡기기">맡기기</option>
+                                <option value="모발 클리닉">모발 클리닉</option>
+                                <option value="단백질 앰플 추가">단백질 앰플 추가</option>
+                                <option value="두피 클리닉">두피 클리닉</option>
                             </select>
                         </div>
-                    </div>
+                        <span class="clinic">값을 정해주세요.</span>
 
-                    <!-- 디자이너 -->
-                    <div class="p-2">
-                        <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary">
-                            Designer
+                        <input hidden name="apointUserId" th:value="${session.user.userId}">
+                        <input hidden name="apointUserPh" th:value="${session.user.userPh}">
+                        <input hidden name="apointUserName" th:value="${session.user.userName}">
+
+                        <div class="d-grid gap-2">
+                            <button class="btn btn-outline-dark" type="button" id="btn-apoint" onclick="checkAll()">
+                                Sign Up
+                            </button>
+                            <button class="btn btn-outline-secondary" type="button">Cancel</button>
                         </div>
                     </div>
-
-                    <input hidden name="apointUserId" th:value="${session.user.userId}">
-                    <input hidden name="apointUserPh" th:value="${session.user.userPh}">
-                    <input hidden name="apointUserName" th:value="${session.user.userName}">
-
-                    <div class="d-grid gap-2">
-                        <button onclick="sumbit()" class="btn btn-outline-dark" type="button" id="btn-apoint">Sign Up
-                        </button>
-                        <button class="btn btn-outline-secondary" type="button">Cancel</button>
-                    </div>
-                </div>
 
 
             </form>
